# wealthcraft-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
migrations/: env.py
tests/: conftest.py
tests/controllers/: test_auth.py  test_category.py  test_expense.py  test_user.py
tests/dao/: test_users.py
tests/services/: test_bearer_token.py
wealthcraft/: __init__.py  config.py  dao.py  dependencies.py  main.py  models.py  server.py
wealthcraft/controllers/: __init__.py  auth.py  category.py  expense.py  user.py
wealthcraft/services/: auth.py
