[tool.poetry]
name = "wealthcraft"
version = "0.1.0"
description = "The backend fot the WealthCraft finances manager"
authors = ["Pedro Moreira <pedro@z33dd.com>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.scripts]
wealthcraft = "wealthcraft.main:app"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
pydantic = { extras = ["email"], version = "^2.6.3" }
pyjwt = "^2.8.0"
typer = { extras = ["rich"], version = "^0.9.0" }
rich = "^13.7.1"
shellingham = "^1.5.4"
uvicorn = "^0.27.1"
passlib = "^1.7.4"
alembic = "^1.13.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
faker = "^23.3.0"
pylama = { extras = ["toml"], version = "^8.4.1" }
pytest-cov = "^4.1.0"

[tool.pylama]
skip = ".venv/*,migrations/*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
